--- a/html/login.css
+++ b/html/login.css
@@ -19,6 +19,7 @@ body a {
     color: rgb(238, 33, 211);
     text-decoration: none;
 }
+
 body a:hover {
     text-decoration: underline;
 }
@@ -26,8 +27,8 @@ body a:hover {
 .container {
     /* background-color: rgb(238, 33, 211); */
     position: relative;
-    width: 40vmax;
-    height: 30vmax;
+    width: 550px;
+    height: 450px;
 
     border-radius: 20px;
     box-shadow: 0 0 50px rgb(238, 33, 211);
@@ -64,7 +65,7 @@ h2 {
 
 .input-box {
     position: relative;
-    margin: 30px 0;
+    margin: 20px 0;
     width: 350px;
     border-bottom: 2px solid white;
     color: white;
@@ -90,16 +91,10 @@ h2 {
     border: none;
 }
 
-/* input:focus~label , input:focus~:valid {
-    top: -7px;
-} */
-.input-box input:focus~label , 
+.input-box input:focus~label,
 .input-box input:valid~label {
     top: -7px;
 }
-/* .input-box:focus + label{
-    top: -7px;
-} */
 
 .forget {
     display: flex;
@@ -174,4 +169,125 @@ button {
     left: 20%;
     top: 450px;
     transition: 1s;
+}
+
+@media (max-width:600px) {
+
+    .container {
+        margin: 0;
+        position: relative;
+        width: 300px;
+        height: 400px;
+        border-radius: 20px;
+        box-shadow: 0 0 50px rgb(238, 33, 211);
+        transition: 1s ease-in-out;
+        overflow: hidden;
+        font-size: 12px;
+    }
+
+    .box {
+        /* position: absolute; */
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    h2 {
+        position: absolute;
+        top: 0px;
+        left: 60px;
+    }
+
+    .input-box {
+        position: relative;
+        margin: 30px 0;
+        width: 180px;
+        border-bottom: 2px solid white;
+        color: white;
+    }
+
+    .forget {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #in {
+        display: block;
+        position: relative;
+        top: -10px;
+    }
+
+    button {
+        position: relative;
+        width: 80%;
+        height: 30px;
+        margin: auto;
+        color: rgb(0, 0, 0);
+        font-size: large;
+        border: 2px solid black;
+        background-color: rgb(238, 33, 211);
+        border-radius: 30px;
+        font-weight: 900;
+        cursor: pointer;
+        border: none;
+        outline: none;
+    }
+
+    .sign-up {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    #signIn {
+        position: absolute;
+        left: 20%;
+        top: 30px;
+        transition: 1s;
+    }
+
+    #signUp {
+        position: absolute;
+        left: 20%;
+        top: 450px;
+        transition: 1s;
+    }
+
+    .input-box label {
+        position: absolute;
+        top: 60%;
+        padding: 0;
+    }
+
+    .input-box input {
+        margin: -10px 0px;
+    }
+
+    .input-box input:focus~label,
+    .input-box input:valid~label {
+        top: -6px;
+    }
+   
+    .gender3 input{
+        position: relative;
+        margin: 0px;
+        padding: 0px;
+        text-wrap: nowrap;
+        display: inline;
+    }
+    .gender3 label{
+        position: relative;
+        margin: 20px 0px;
+        text-wrap: nowrap;
+    }
+    .gender3 span{
+        position: relative;
+        margin: 0px 10px;
+    }
+.sign-in{
+    margin: 15px 0px;
+}
 }
